--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 * {box-sizing: border-box; }
 
 html, body {
+  font-family: 'Architects Daughter', cursive;
+  font-size: 20px;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -13,14 +15,8 @@ main {
 }
 
 .content {
-  /*background: none repeat scroll 0 0 blue;*/
   min-height: 100%;
+  padding: 50px 30px;
   text-align: center;
-}
-
-.center {
-  display: inline-block;
-  padding: 10px 15px;
-  vertical-align: middle;
   width: 100%;
 }
