--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,42 @@ main {
   width: 100%;
 }
 
+nav {
+  background-color: white;
+  box-shadow: 0 2px 10px black;
+  color: black;
+  font-weight: bold;
+  position: fixed;
+  text-align: center;
+  width: 100%;
+}
+
+nav > ul {
+  height: 60px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav > ul > li {
+  display: inline-block;
+  padding: 18px;
+}
+
+nav > ul > li:hover {
+  background-color: black;
+  color: white;
+  opacity: 0.5;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .content {
   min-height: 100%;
-  padding: 50px 30px;
+  padding: 70px 30px;
   text-align: center;
   width: 100%;
 }
